--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.3.0",
     "ava": "^3.1.0",
+    "axios": "^0.20.0",
     "core-js": "^3.6.4",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
