--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "core-js": "^3.6.4",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
+    "request": "^2.88.2",
     "rollup": "^1.30.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-terser": "^5.2.0"
